<?xml version="1.0" encoding="utf-8"?>
<!--
	GetVelo
    Copyright (C) 2013 Boris Fritscher

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
!-->
<resources>
    <string name="app_name">GetVelo</string>
    <string name="network_list">Network list</string>
    <string name="loading">Loading...</string>
    <string name="network_none">None</string>
    <string name="network_all">All</string>
    <string name="error_loading_list">Retrieving list failed!</string>
    <string name="nav_n">N</string>
    <string name="nav_ne">NE</string>
    <string name="nav_e">E</string>
    <string name="nav_se">SE</string>
    <string name="nav_s">S</string>
    <string name="nav_sw">SW</string>
    <string name="nav_w">W</string>
    <string name="nav_nw">NW</string>
    
    <string name="display_settings">Display settings</string>
    
    <string name="default_network_title">Default network</string>
    <string name="default_network_summary">Select which network to display</string>
    <string name="default_network_dialog">Select a network</string>
    
    <string name="sort_order_title">Station order</string>
    <string name="sort_order_summary">Select in which order to display stations</string>
    <string name="sort_order_dialog">Select a sort order</string>
    
    <string name="sort_id">Network/station ID</string>
    <string name="sort_location">Distance to station</string>
    <string name="sort_city">City/Station name</string>
    <string name="sort_abc">Alphabetically</string>
    
    <string name="about">About</string>
    <string name="about_data">data from</string>
    
    <string name="menu_refresh">Refresh</string>
    <string name="menu_settings">Settings</string>
    
    <string name="widget_name">GetVelo Widget</string>
    <string name="choose">Choose</string>
</resources>
